--- a/src/template/components/header/header.pug
+++ b/src/template/components/header/header.pug
@@ -1,2 +1,7 @@
 mixin header()
 	header.header&attributes(attributes)
+		.header__inner
+			.header__burger
+			.header__logo
+				.container
+					h1 Redsoft UI Kit
