--- a/src/assets/styles/layout/_typo.scss
+++ b/src/assets/styles/layout/_typo.scss
@@ -1,3 +1,40 @@
 .test {
 	opacity: 1;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6{
+	font-weight: 300;
+	line-height: 1.2;
+	margin-top: 0;
+	margin-bottom: 2rem;
+}
+
+h1 {
+	font-size: 4.0rem;
+}
+
+h2 {
+	font-size: 3.2rem;
+}
+
+h3 {
+	font-size: 2.6rem;
+}
+
+h4 {
+	font-size: 2.0rem;
+}
+
+h5 {
+	font-size: 1.4rem;
+}
+
+h6 {
+	font-size: 0.5rem;
+}
+
