--- a/src/assets/styles/utils/_variables.scss
+++ b/src/assets/styles/utils/_variables.scss
@@ -1,9 +1,24 @@
-$ff_main: 'CirceRegular', Helvetica, Arial, sans-serif;
-$ff_bold: 'CirceBold', Helvetica, Arial, sans-serif;
-$ff_exbold: 'Circe-ExtraBold', Helvetica, Arial, sans-serif;
-$ff_seg: 'Segoe UI', Helvetica, Arial, sans-serif;
-$ff_segbold: 'Segoe UI Bold', Helvetica, Arial, sans-serif;
-$fz_main:18px;
+$ff_main: 'CirceRegular',
+Helvetica,
+Arial,
+sans-serif;
+$ff_bold: 'CirceBold',
+Helvetica,
+Arial,
+sans-serif;
+$ff_exbold: 'Circe-ExtraBold',
+Helvetica,
+Arial,
+sans-serif;
+$ff_seg: 'Segoe UI',
+Helvetica,
+Arial,
+sans-serif;
+$ff_segbold: 'Segoe UI Bold',
+Helvetica,
+Arial,
+sans-serif;
+$fz_main:16px;
 $margin-padding:10px;
 $width_xs_s:550px;
 $width_xs:767px;
@@ -49,8 +64,8 @@ $fs_3: 2.25em;
 
 $fw_b: 700;
 //COLORS
-$clr_main:#00bd2d;
-$clr_main_1: #007b1f;
+$clr_main:#e12b2b;
+$clr_main_1: #c12929;
 $clr_main_2: #9ae8ac;
 $clr_main_h: #edfff2;
 $clr_yell: #ffd554;
