--- a/src/template/components/btn/btn.pug
+++ b/src/template/components/btn/btn.pug
@@ -1,26 +1,20 @@
-mixin btn(size = 'md', color = 'yell', type = 'link', agree = false)
+mixin btn(size = 'md', color = 'transparent', type = 'link', agree = false)
     if agree
         .btn-wrapper.rsform-group
             if type == 'submit'
                 .btn-inner
                     button(type="submit" class=`btn-${size == null ? 'md' : size} btn-${color}`).btn&attributes(attributes)
-                        span
-                            block
+                      block
                 small Нажимая кнопку «отправить» #[a(href='/') я даю согласие на обработку персональных данных]
             else
                 .btn-inner
                     a(href="javascript:void(0)" class=`btn-${size == null ? 'md' : size} btn-${color}`).btn&attributes(attributes)
-                        span
-                            block
+                      block
                 small Нажимая кнопку «отправить» #[a(href='/') я даю согласие на обработку персональных данных]
     else
         if type == 'submit'
-            .btn-inner
                 button(type="submit" class=`btn-${size == null ? 'md' : size} btn-${color}`).btn&attributes(attributes)
-                    span
-                        block
+                  block
         else
-            .btn-inner
                 a(href="javascript:void(0)" class=`btn-${size == null ? 'md' : size} btn-${color}`).btn&attributes(attributes)
-                    span
-                        block
+                  block
