--- a/src/template/components/header/header.scss
+++ b/src/template/components/header/header.scss
@@ -1,3 +1,14 @@
 .header {
 	opacity: 1;
+	background-color: $clr_main;
+	padding:5px 0;
+	margin-bottom: 40px;
+	
+	&__logo{
+		color:#fff;
+		
+		h1 {
+			margin-bottom: 0;
+		}
+	}
 }
