--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -1,10 +1,16 @@
 extends ../_layouts/master.pug
 block title
-	+title("Home")
+	+title("Redsoft UI Kit")
 block content
-	h1 Home
-	nav
-		li
-			a(href='/about.html') Home
-		li
-			a(href='/about.html') About
+	.container
+		.b-buttons.b-component
+			h3 Кнопки
+			a(href="javascript:void(0)", class="btn btn-primary") btn btn-primary
+			a(href="javascript:void(0)", class="btn btn-border") btn btn-border
+			a(href="javascript:void(0)", class="btn btn-fill") btn btn-fill
+		.b-forms.b-component
+			h3 Формы
+			+rsForm()
+		.b-carousel.b-component
+			h3 Слайдеры
+			+carousel()
