--- a/src/template/components/btn/btn.scss
+++ b/src/template/components/btn/btn.scss
@@ -1,10 +1,9 @@
 .btn {
 	display: inline-block;
-	height: 38px;
-	padding: 0 30px;
+	padding: 6px 30px;
 	color: $clr_primary;
 	text-align: center;
-	line-height: 38px;
+	line-height: 1.6;
 	text-transform: uppercase;
 	text-decoration: none;
 	border-radius: 4px;
