--- a/src/template/components/rsForm/rsForm.scss
+++ b/src/template/components/rsForm/rsForm.scss
@@ -27,8 +27,11 @@
 		padding: 10px;
 		border: 1px solid $clr_border;
 		transition: all .2s;
-		color: $clr_dark_2;
 		outline: none;
+			
+		&::placeholder{
+			color: $clr_dark_2;
+		}
 
 		&:focus {
 			border-color: $clr_main;
@@ -45,7 +48,10 @@
 		width: 100%;
 		transition: all .2s;
 		outline: none;
-		color: $clr_dark_2;
+		
+		&::placeholder{
+			color: $clr_dark_2;
+		}
 
 		&:focus {
 			border-color: $clr_main;
