--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -3,6 +3,14 @@ block title
 	+title("Redsoft UI Kit")
 block content
 	.container
+		.b-typographie
+			h3 Заголовки
+				h1 Redsoft
+				h2 Redsoft
+				h3 Redsoft
+				h4 Redsoft
+				h5 Redsoft
+				h6 Redsoft
 		.b-buttons.b-component
 			h3 Кнопки
 			a(href="javascript:void(0)", class="btn btn-primary") btn btn-primary
