--- a/src/assets/styles/layout/_typo.scss
+++ b/src/assets/styles/layout/_typo.scss
@@ -14,27 +14,27 @@ h6{
 	margin-bottom: 2rem;
 }
 
-h1 {
+.h1 {
 	font-size: 4.0rem;
 }
 
-h2 {
+.h2 {
 	font-size: 3.2rem;
 }
 
-h3 {
+.h3 {
 	font-size: 2.6rem;
 }
 
-h4 {
+.h4 {
 	font-size: 2.0rem;
 }
 
-h5 {
+.h5 {
 	font-size: 1.4rem;
 }
 
-h6 {
+.h6 {
 	font-size: 0.5rem;
 }
 
