правки по верстке
Signed-off-by: denysvol <гinfo.denvol@gmail.com>

--- a/src/assets/styles/components/_blocks.scss
+++ b/src/assets/styles/components/_blocks.scss
@@ -1,7 +1,13 @@
 
 .b-forms {
+	max-width: 100%;
+}
+.rs-form {
 	max-width: 500px;
 }
+
 .b-component{
-	margin-bottom: 45px;
+	margin-bottom: 50px;
+	border-bottom: 1px solid #e12b2b;
+	padding-bottom: 50px;
 }
