--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -5,13 +5,13 @@ block content
 	.container
 		
 		.b-buttons.b-component
-			h3.h3 Кнопки
+			h3.h3 1. Кнопки
 			+btn() btn-primary
 			+btn('fill') btn-fill
 			+btn('border') btn-border
 			+btn('fill','submit', false, 'btn-submit')
 		.b-forms.b-component
-			h3.h3 Формы
+			h3.h3 2. Формы
 			form.rs-form(id="rsform")
 				+rsForm('text', '', 'ФИО')
 				+rsForm('tel', '','Телефон', 'true')
@@ -22,15 +22,14 @@ block content
 					input(type="submit", value="Отправить", class='btn btn-fill btn-submit')
 				
 		.b-carousel.b-component
-			h3.h3 Слайдеры
+			h3.h3 3. Слайдеры
 			+carousel()
 		.b-typographie.b-component
-			h3.h3 Заголовки
-				h1.h1 Redsoft
-				h2.h2 Redsoft
-				h3.h3 Redsoft
-				h4.h4 Redsoft
-				h5.h5 Redsoft
-				h6.h6 Redsoft
-		.b-checkboxes.b-component
+			h3.h3 4. Заголовки
+				h1.h1 Redsoft h1
+				h2.h2 Redsoft h2
+				h3.h3 Redsoft h3
+				h4.h4 Redsoft h4
+				h5.h5 Redsoft h5
+				h6.h6 Redsoft h6
 			
