--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -3,7 +3,16 @@ block title
 	+title("Redsoft UI Kit")
 block content
 	.container
-		
+		.b-component
+			ul
+				each item in $data.headerLink
+					li
+						a(href=item.link)=item.name
+		.b-component
+			ul
+				each item in $data.footerLink(10)
+					li
+						a(href=item.link)=item.name
 		.b-buttons.b-component
 			h3.h3 1. Кнопки
 			+btn() btn-primary
@@ -20,7 +29,7 @@ block content
 				+rsForm('text', '', 'Ваше сообщение...', 'true', true)
 				.rs-form__footer
 					input(type="submit", value="Отправить", class='btn btn-fill btn-submit')
-				
+
 		.b-carousel.b-component
 			h3.h3 3. Слайдеры
 			+carousel()
