formValidation && сделал стили для форм стандартными для всего сайта

--- a/src/template/components/rsForm/rsForm.pug
+++ b/src/template/components/rsForm/rsForm.pug
@@ -2,6 +2,7 @@ mixin rsForm(type="text", dopClass, placeholder, validate = false, textarea = fa
 	if !textarea 
 			.rs-form__field
 				input(type=`${type}`, class=`rs-form__input ${dopClass}`, placeholder=`${placeholder}`, data-validate=`${validate}`)
+				span.error-label
 	else 
 		textarea(type='textarea' class="rs-form__textarea", placeholder=`${placeholder}`)
 		
