--- a/src/assets/styles/components/_blocks.scss
+++ b/src/assets/styles/components/_blocks.scss
@@ -1,13 +1,51 @@
-
 .b-forms {
 	max-width: 100%;
 }
+
 .rs-form {
 	max-width: 500px;
 }
 
-.b-component{
+.b-component {
 	margin-bottom: 50px;
 	border-bottom: 1px solid #e12b2b;
 	padding-bottom: 50px;
+}
+
+.redsoft {
+	color: $clr_primary;
+	text-decoration: none;
+	display: inline-block;
+
+	&__inner {
+		display: flex;
+		align-items: center;
+
+		&:hover {
+			path {
+				fill: $clr_main;
+			}
+
+			.redsoft__caption {
+				color: $clr_main;
+			}
+		}
+	}
+
+
+
+	&__caption {
+		padding-left: 20px;
+		transition: all .2s;
+	}
+
+	&__img {
+		width: 50px;
+		height: 50px;
+
+		path {
+			fill: $clr_primary;
+			transition: all .2s;
+		}
+	}
 }
