component range slider and radion and checkobx

--- a/src/assets/styles/_app.scss
+++ b/src/assets/styles/_app.scss
@@ -1,4 +1,3 @@
-
 /*
   Utils
 */
@@ -28,6 +27,7 @@
 @import '../../../node_modules/magnific-popup/dist/magnific-popup.css';
 @import '../../../node_modules/jquery-nice-select/scss/nice-select.scss';
 @import '../../../node_modules/overlayscrollbars/css/OverlayScrollbars.min.css';
+@import '../../../node_modules/nouislider/distribute/nouislider.min.css';
 
 /*
   PUG components
