--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -44,4 +44,23 @@ block content
 				h4.h4 Redsoft h4
 				h5.h5 Redsoft h5
 				h6.h6 Redsoft h6
+		.b-boxes.b-component
+			.b-boxes__block
+				.b-boxes__input
+					input(type="checkbox" , id="checkbox")
+					label(for="checkbox") Чекбокс 1
+				.b-boxes__input
+					input(type="checkbox" , id="checkbox2")
+					label(for="checkbox2") Чекбокс 2
+			.b-boxes__block
+				.b-boxes__input
+					input(type="radio" ,name="radios", id="radio1")
+					label(for="radio1") Радиокнопка 1
+				.b-boxes__input
+					input(type="radio" ,name="radios", id="radio2")
+					label(for="radio2")  Радиокнопка 2
+		.b-range-slider.b-component
+			.range-slider
+				
+			
 			
