--- a/src/assets/styles/components/_blocks.scss
+++ b/src/assets/styles/components/_blocks.scss
@@ -6,16 +6,35 @@
 	max-width: 500px;
 }
 
+.range-slider {
+	.noUi-connect {
+		background: $clr_main;
+	}
+}
+
 .b-component {
 	margin-bottom: 50px;
 	border-bottom: 1px solid #e12b2b;
 	padding-bottom: 50px;
 }
 
+.b-boxes {
+	display: flex;
+
+	&__block {
+		flex-basis: 50%;
+	}
+
+	&__input {
+		margin-bottom: 5px;
+	}
+}
+
 .redsoft {
-	color: $clr_primary;
 	text-decoration: none;
 	display: inline-block;
+	color: $clr_main;
+
 
 	&__inner {
 		display: flex;
@@ -23,16 +42,15 @@
 
 		&:hover {
 			path {
-				fill: $clr_main;
+				fill: $clr_primary;
 			}
 
 			.redsoft__caption {
-				color: $clr_main;
+				color: $clr_primary;
+
 			}
 		}
 	}
-
-
 
 	&__caption {
 		padding-left: 20px;
@@ -44,7 +62,7 @@
 		height: 50px;
 
 		path {
-			fill: $clr_primary;
+			fill: $clr_main;
 			transition: all .2s;
 		}
 	}
