--- a/src/assets/styles/components/_forms.scss
+++ b/src/assets/styles/components/_forms.scss
@@ -49,3 +49,59 @@ textarea {
 		border-color: $clr_main;
 	}
 }
+
+input[type="radio"],
+input[type="checkbox"] {
+	position: absolute;
+	z-index: -1;
+	opacity: 0;
+	margin: 10px 0 0 7px;
+
+	&:checked {
+		&+label:after {
+			opacity: 1;
+		}
+	}
+
+	&+label {
+		position: relative;
+		padding: 0 0 0 35px;
+		cursor: pointer;
+
+		&:before {
+			content: '';
+			position: absolute;
+			top: -3px;
+			left: 0;
+			width: 22px;
+			height: 22px;
+			border: 1px solid #CDD1DA;
+			border-radius: 50%;
+			background: #FFF;
+		}
+
+		&:after {
+			content: '';
+			position: absolute;
+			top: 1px;
+			left: 4px;
+			width: 16px;
+			height: 16px;
+			border-radius: 50%;
+			background: $clr_main;
+			box-shadow: inset 0 1px 1px rgba(0, 0, 0, .5);
+			opacity: 0;
+			transition: .2s;
+		}
+	}
+}
+
+input[type="checkbox"] {
+	&+label {
+
+		&:before,
+		&:after {
+			border-radius: 0;
+		}
+	}
+}
