--- a/src/assets/styles/utils/_variables.scss
+++ b/src/assets/styles/utils/_variables.scss
@@ -1,23 +1,8 @@
-$ff_main: 'CirceRegular',
-Helvetica,
-Arial,
-sans-serif;
-$ff_bold: 'CirceBold',
-Helvetica,
-Arial,
-sans-serif;
-$ff_exbold: 'Circe-ExtraBold',
-Helvetica,
-Arial,
-sans-serif;
-$ff_seg: 'Segoe UI',
-Helvetica,
-Arial,
-sans-serif;
-$ff_segbold: 'Segoe UI Bold',
-Helvetica,
-Arial,
-sans-serif;
+$ff_main: 'CirceRegular', Helvetica, Arial, sans-serif;
+$ff_bold: 'CirceBold', Helvetica, Arial, sans-serif;
+$ff_exbold: 'Circe-ExtraBold', Helvetica, Arial, sans-serif;
+$ff_seg: 'Segoe UI', Helvetica, Arial, sans-serif;
+$ff_segbold: 'Segoe UI Bold', Helvetica, Arial, sans-serif;
 $fz_main:16px;
 $margin-padding:10px;
 $width_xs_s:550px;
@@ -105,7 +90,7 @@ $bxsh: 0 4px 24px 7px rgba(211, 218, 228, 0.4);
 $bxsh_2: 0 4px 34px -2px rgba(211, 218, 228, 0.7);
 
 $br_r8:8px;
-$br_r: 3px;
+$br_r: 4px;
 //ICONS
 $icon_width:20px;
 $icon_bg: url('/dist/img/sprite.svg');
