--- a/src/template/components/btn/btn.scss
+++ b/src/template/components/btn/btn.scss
@@ -6,14 +6,13 @@
 	line-height: 1.6;
 	text-transform: uppercase;
 	text-decoration: none;
-	border-radius: 4px;
+	border-radius: $br_r;
 	border: 1px solid $clr_border;
 	transition: all .2s;
 	cursor: pointer;
 	box-sizing: border-box;
 	margin-right: 5px;
 	vertical-align: middle;
-
 
 	&-border {
 		border: 1px solid $clr_main;
@@ -25,14 +24,11 @@
 		}
 	}
 
-
 	&-primary {
-
 		&:hover {
 			border: 1px solid $clr_light;
 		}
 	}
-
 
 	&-fill {
 		background-color: $clr_main;
@@ -43,5 +39,4 @@
 			background-color: $clr_main_1;
 		}
 	}
-
 }
