--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -21,17 +21,16 @@ block content
 			+btn('fill','submit', false, 'btn-submit')
 		.b-forms.b-component
 			h3.h3 2. Формы
-			form.rs-form
-				//- +rsForm('text', '', 'ФИО')
-				//- +rsForm('tel', '','Телефон', '{"type":"numbersCount","minL":11,"message": "В поле Телефон недостаточно символов"}')
-				//- +rsForm('email', '', 'E-mail', '{"type":"email","message": "Некорректный E-mail"}')
-				//- +rsForm('text', 'date-input','Дата', '{"type":"numbersCount","minL":10,"message": "В поле Дата недостаточно символов"}')
-				//- +rsForm('password', '','Пароль', '{"type":"default","message": "Поле обязательно для заполнения"}')
-				//- +rsForm('text', '', 'Ваше сообщение...', '{"type":"default","message": "Поле обязательно для заполнения"}', true)
-				+rsForm('email', '', 'E-mail')(name="email", required)
-				+rsForm('text', '', 'ФИО')(data-msg="Поле ФИО обязательно для заполнения", name="fio", minlength="3", required)
-				.rs-form__footer
-					input(type="submit", value="Отправить", class='btn btn-fill btn-submit btn-validate')
+			form.form
+				+formField('text', 'ФИО')(data-msg="Поле ФИО обязательно для заполнения", data-msg-minlength="Пожалуйста, введите не меньше 3 символов.", minlength="3", required)
+				+formField('tel', 'Телефон')(name="phoneRU", required)
+				+formField('text', 'Дата')(name="date", required).date-input
+				+formField('text', 'E-mail')(name="email", required).email-input
+				+formField('password', 'Пароль')(name="password", minlength="6", password="true", required)#password
+				+formField('password', 'Повторите пароль')(name="password-confirm", password="true", equalTo="#password", required)#password-confirm
+				+formField('select', 'Выберите значение', $data.selectOptions)(name="select", required)
+				.form__footer
+					+btn('fill','submit', false, 'Отправить')
 
 		.b-carousel.b-component
 			h3.h3 3. Слайдеры
