--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -48,14 +48,14 @@ block content
 			.b-boxes
 				.b-boxes__block
 					.b-boxes__input
-						+checkbox(id="checkbox")
+						+checkbox("Чекбокс 1")(id="checkbox")
 					.b-boxes__input
-						+checkbox(id="checkbox1")
+						+checkbox("Чекбокс 2")(id="checkbox1")
 				.b-boxes__block
 					.b-boxes__input
-						+radio(name="radios",  id="radio1")
+						+radio("Радиокнопка 1")(name="radios",  id="radio1")
 					.b-boxes__input
-						+radio(name="radios",  id="radio2")
+						+radio("Радиокнопка 2")(name="radios",  id="radio2")
 		.b-range-slider.b-component
 			h3.h3 6. Range-slider
 			.range-slider
