--- a/src/templates/_mixins/list.pug
+++ b/src/templates/_mixins/list.pug
@@ -2,11 +2,14 @@
 
 include ../components/header/header
 include ../components/footer/footer
-include ../components/breadcrumb/breadcrumb
-include ../components/btn/btn
-include ../components/carousel/carousel
 include ../components/popups/popups
-include ../components/formField/formField
+include ../components/ui__kit/ui__kit
+
+
+include ../blocks/breadcrumb/breadcrumb
+include ../blocks/btn/btn
+include ../blocks/carousel/carousel
+include ../blocks/form__field/form__field
 
 
 mixin title(...titleParts)
