--- a/src/assets/styles/components/_forms.scss
+++ b/src/assets/styles/components/_forms.scss
@@ -58,7 +58,7 @@ input[type="checkbox"] {
 	margin: 10px 0 0 7px;
 
 	&:checked {
-		&+label:after {
+		& + label:after {
 			opacity: 1;
 		}
 	}
@@ -75,9 +75,9 @@ input[type="checkbox"] {
 			left: 0;
 			width: 22px;
 			height: 22px;
-			border: 1px solid #CDD1DA;
+			border: 1px solid #cdd1da;
 			border-radius: 50%;
-			background: #FFF;
+			background: #fff;
 		}
 
 		&:after {
