--- a/src/assets/styles/_app.scss
+++ b/src/assets/styles/_app.scss
@@ -6,9 +6,9 @@
 @import './utils/keyframes';
 
 /*
-  Components
+  Common
 */
-@import './components/*.scss';
+@import './common/*.scss';
 
 /*
   Layout
