--- a/src/templates/_mixins/list.pug
+++ b/src/templates/_mixins/list.pug
@@ -10,6 +10,7 @@ include ../blocks/breadcrumb/breadcrumb
 include ../blocks/btn/btn
 include ../blocks/carousel/carousel
 include ../blocks/form__field/form__field
+include ../blocks/hamburger/hamburger
 
 
 mixin title(...titleParts)
