--- a/src/assets/styles/layout/_general.scss
+++ b/src/assets/styles/layout/_general.scss
@@ -17,3 +17,40 @@ body {
 html {
 	scroll-behavior: smooth;
 }
+
+.redsoft {
+	text-decoration: none;
+	display: inline-block;
+	color: $clr_main;
+
+	&__inner {
+		display: flex;
+		align-items: center;
+
+		&:hover {
+			path {
+				fill: $clr_primary;
+			}
+
+			.redsoft__caption {
+				color: $clr_primary;
+
+			}
+		}
+	}
+
+	&__caption {
+		padding-left: 20px;
+		transition: all .2s;
+	}
+
+	&__img {
+		width: 50px;
+		height: 50px;
+
+		path {
+			fill: $clr_main;
+			transition: all .2s;
+		}
+	}
+}
