--- a/src/assets/styles/layout/_global.scss
+++ b/src/assets/styles/layout/_global.scss
@@ -1,3 +1,36 @@
-.test {
-	opacity: 1;
+
+.redsoft {
+	text-decoration: none;
+	display: inline-block;
+	color: $clr_main;
+
+	&__inner {
+		display: flex;
+		align-items: center;
+
+		&:hover {
+			path {
+				fill: $clr_primary;
+			}
+
+			.redsoft__caption {
+				color: $clr_primary;
+			}
+		}
+	}
+
+	&__caption {
+		padding-left: 20px;
+		transition: all .2s;
+	}
+
+	&__img {
+		width: 50px;
+		height: 50px;
+
+		path {
+			fill: $clr_main;
+			transition: all .2s;
+		}
+	}
 }
