--- a/src/assets/styles/utils/_mixins.scss
+++ b/src/assets/styles/utils/_mixins.scss
@@ -49,6 +49,8 @@
 		$rotate: -45deg;
 	}
 
+	width: unset;
+	height: unset;
 	border: solid #{$color};
 	border-width: 0 #{$width} #{$width} 0;
 	display: inline-block;
