--- a/src/templates/blocks/form__field/form__field.pug
+++ b/src/templates/blocks/form__field/form__field.pug
@@ -14,6 +14,34 @@ mixin formField(type="text", placeholder, options = [], textarea = false)
 	else if (type == 'checkbox')
 		.form__field.js-form__field.form__field-checkbox
 			+checkbox(placeholder)&attributes(attributes)(data-msg="")
+	else if (type == 'checkbox')
+		.form__field.js-form__field.form__field-checkbox
+			+checkbox(placeholder)&attributes(attributes)(data-msg="")
+	else if (type == 'radio')
+		.form__field.form__field-radio
+			+radio(placeholder)&attributes(attributes)(data-msg="")
 	else
 		.form__field.js-form__field
 			textarea(type='textarea' class="form__textarea", placeholder=`${placeholder}` data-validate=`${validate}`)
+
+
+
+mixin radio(text)
+	input(type="radio")&attributes(attributes)
+	label(for=attributes.id)=text
+
+
+
+mixin checkbox(text)
+	input(type="checkbox")&attributes(attributes)
+	label(for=attributes.id)=text
+
+
+
+mixin selectBox(options, defaultText)
+	select&attributes(attributes)(data-default-text=`${defaultText ? defaultText : ''}`)
+		each option in options
+			if (option == '')
+				option(value="", data-display="Выберите значение") Выберите значение
+			else
+				option(value=option)=option
