--- a/src/templates/_mixins/list.pug
+++ b/src/templates/_mixins/list.pug
@@ -1,4 +1,6 @@
 - var staticPath = "./assets/";
+- var imgPath = `${staticPath}images/`;
+
 
 include ../components/header/header
 include ../components/footer/footer
@@ -8,6 +10,7 @@ include ../components/ui__kit/ui__kit
 
 include ../blocks/breadcrumb/breadcrumb
 include ../blocks/btn/btn
+include ../blocks/icon/icon
 include ../blocks/carousel/carousel
 include ../blocks/form__field/form__field
 include ../blocks/hamburger/hamburger
