--- a/src/assets/styles/layout/_global.scss
+++ b/src/assets/styles/layout/_global.scss
@@ -9,7 +9,7 @@
 		align-items: center;
 
 		&:hover {
-			path {
+			svg {
 				fill: $clr_primary;
 			}
 
@@ -28,7 +28,7 @@
 		width: 50px;
 		height: 50px;
 
-		path {
+		svg {
 			fill: $clr_main;
 			transition: all .2s;
 		}
