--- a/src/assets/styles/utils/_variables.scss
+++ b/src/assets/styles/utils/_variables.scss
@@ -56,6 +56,8 @@ $clr_main_h: #edfff2;
 $clr_yell: #ffd554;
 $clr_light:#c0c6ca;
 $clr_darklight:#777;
+$disabled_bg: #aaafb3;
+$disabled_cl: #fff;
 $clr_primary:#002250;
 $clr_error:#e12b2b;
 $clr_highlight:#77ab60;
