--- a/src/templates/blocks/btn/btn.scss
+++ b/src/templates/blocks/btn/btn.scss
@@ -39,4 +39,14 @@
 			background-color: $clr_main_1;
 		}
 	}
+
+	&-disabled,
+	&:disabled {
+		background-color: rgba($disabled_bg, .9);
+		color: $disabled_cl;
+
+		&:hover {
+			background-color: rgba($disabled_bg, 1);
+		}
+	}
 }
