--- a/src/templates/components/ui__kit/ui__kit.pug
+++ b/src/templates/components/ui__kit/ui__kit.pug
@@ -6,17 +6,39 @@ mixin ui__kit()
 			+btn('fill') btn-fill
 			+btn('border') btn-border
 			+btn('fill','submit', false, 'btn-submit')
+			+btn('disabled') btn-disabled
 		.b-forms.b-component
 			h3.h3 2. Формы
 			form.form
-				+formField('text', 'ФИО')(data-msg="Поле ФИО обязательно для заполнения", data-msg-minlength="Пожалуйста, введите не меньше 3 символов.", minlength="3", required)
-				+formField('tel', 'Телефон')(name="phoneRU", required)
+				+formField('text', 'ФИО')(
+					data-msg="Поле ФИО обязательно для заполнения",
+					data-msg-minlength="Пожалуйста, введите не меньше 3 символов.",
+					minlength="3",
+					required
+				)
+				+formField('tel', 'Телефон')(name="phoneRU" required)
 				+formField('text', 'Дата')(name="date", required).date-input
 				+formField('text', 'E-mail')(name="email", required).email-input
 				+formField('text', 'Банковская карта')(name="creditcard", required).card-input
-				+formField('password', 'Пароль')(name="password", minlength="6", password="true", required)#password
-				+formField('password', 'Повторите пароль')(name="password-confirm", password="true", equalTo="#password", required)#password-confirm
-				+formField('select', 'Выберите значение', $data.selectOptions)(name="select", required)
+				+formField('password', 'Пароль')(
+					name="password",
+					id="password",
+					minlength="6",
+					password="true",
+					required
+				)
+				+formField('password', 'Повторите пароль')(
+					name="password-confirm",
+					id="password-confirm",
+					password="true",
+					equalTo="#password",
+					required
+				)
+				+formField('select', 'Выберите значение', $data.selectOptions)(
+					name="select",
+					data-msg="Выберите один из вариантов"
+					required
+				)
 				+formField('checkbox', 'Чекбокс 1')(name="checkbox", id="checkbox-form" required)
 				.form__radios.js-form__radios
 					+formField('radio', 'Радио-баттон 1')(name="radiost", id="radio-form-1" required)
