ui kit files change

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -13,12 +13,12 @@
 /*
   Layout
 */
-@import './layout/_normalize';
-@import './layout/_fonts';
-@import './layout/_typo';
-@import './layout/_grid';
-@import './layout/_global';
-@import './layout/_general';
+@import './layout/normalize';
+@import './layout/fonts';
+@import './layout/typo';
+@import './layout/grid';
+@import './layout/global';
+@import './layout/general';
 
 /*
   libs
