--- a/src/templates/components/ui__kit/ui__kit.scss
+++ b/src/templates/components/ui__kit/ui__kit.scss
@@ -15,6 +15,7 @@
 			&:hover {
 				.menu {
 					opacity: 1;
+					left: 0;
 				}
 			}
 		}
@@ -41,14 +42,15 @@
 
 	.menu {
 		position: absolute;
-		bottom: -67px;
+		top: 64px;
 		min-width: 150px;
 		border-left: 1px solid $clr_main;
 		border-right: 1px solid $clr_main;
 		border-bottom: 1px solid $clr_main;
 		background-color: #fff;
 		opacity: 0;
-		transition: all .2s;
+		left: 9999px;
+		transition: opacity .2s;
 
 
 		&__link {
@@ -94,7 +96,7 @@
 	}
 
 	.main-content {
-		margin-top: 40px;
+		margin-top: 126px;
 	}
 
 	.range-slider {
@@ -107,6 +109,15 @@
 		margin-bottom: 50px;
 		border-bottom: 1px solid #e12b2b;
 		padding-bottom: 50px;
+
+		h3 {
+			position: relative;
+
+			.anchor {
+				position: absolute;
+				top: -100px
+			}
+		}
 	}
 
 	.b-boxes {
