--- a/src/templates/components/ui__kit/ui__kit.scss
+++ b/src/templates/components/ui__kit/ui__kit.scss
@@ -50,17 +50,14 @@
 		background-color: #fff;
 		opacity: 0;
 		left: 9999px;
-		transition: opacity .2s;
-
+		transition: opacity 0.2s;
 
 		&__link {
 			color: $clr_main;
 			display: block;
-			color: #000;
 			text-decoration: none;
-			transition: all .2s;
+			transition: all 0.2s;
 			padding: 11px 15px;
-
 
 			&:hover {
 				background-color: $clr_main;
@@ -69,14 +66,13 @@
 		}
 
 		&:after {
-			content: '';
+			content: "";
 			position: absolute;
 			width: 100%;
 			height: 22px;
 			top: -22px;
 			left: 0;
 		}
-
 
 		&-trigger {
 			border: 2px solid #fff;
@@ -86,8 +82,6 @@
 			z-index: 11;
 			position: relative;
 			padding: 5px 8px;
-
-
 		}
 	}
 
@@ -115,7 +109,7 @@
 
 			.anchor {
 				position: absolute;
-				top: -100px
+				top: -100px;
 			}
 		}
 	}
