--- a/src/templates/pages/ui-page.pug
+++ b/src/templates/pages/ui-page.pug
@@ -33,7 +33,7 @@ block title
 				.main-content
 					.container
 						+ui__kit()
-				.hide
+				.g-hidden
 					+popups()
 				footer.footer
 					.footer__inner
