алиасы для css/js файлов
Signed-off-by: denysvol <гinfo.denvol@gmail.com>

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -23,11 +23,11 @@
 /*
   libs
 */
-@import '../../../node_modules/swiper/dist/css/swiper.min';
-@import '../../../node_modules/magnific-popup/dist/magnific-popup.css';
-@import '../../../node_modules/jquery-nice-select/scss/nice-select.scss';
-@import '../../../node_modules/overlayscrollbars/css/OverlayScrollbars.min.css';
-@import '../../../node_modules/nouislider/distribute/nouislider.min.css';
+@import '~swiper/dist/css/swiper.min';
+@import '~magnific-popup/dist/magnific-popup.css';
+@import '~jquery-nice-select/scss/nice-select.scss';
+@import '~overlayscrollbars/css/OverlayScrollbars.min.css';
+@import '~nouislider/distribute/nouislider.min.css';
 
 /*
   PUG blocks
